# hand-gesture-tracking

./: .gitignore  CMakeLists.txt  HandDetector.cpp  LICENSE
